--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h2 style="text-align:center;color:red">If you Love Anime</h2>
 <p>Press the Button</p>
 <button style="color:red;text-align:center">Submit</button>
+<P style="color:red">Thanks for the Support!</p>
 </body>
 </html>
